# alignment

./: Dockerfile  build-script.sh  build-tools.sh  mypy.ini  pyproject.toml  run.sh
src/: __init__.py  auth.py  logged_in.py  main.py
src/kink_lists/: kink-list.txt  kink_list.py
src/migrations/: data_migrations.py
src/models/: combined_kink.py  enums.py  id.py  kink.py  kinks.py  link.py  user.py
src/static/css/: main.css
src/templates/: base.html  index.html  kinks.html  kinks_combined.html  links.html  links_kinks.html  login.html  signup.html
src/wrappers/: mongo.py
stubs/: flask_login.pyi
