[tool.poetry]
name = "alignment"
version = "0.1.0"
description = ""
authors = ["KarrotLondon <notreal@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pymongo = {extras = ["srv"], version = "^4.3.2"}
python-dotenv = "^0.21.0"
Flask-Login = "^0.6.2"
pydantic = "^1.10.2"
fastapi = "^0.85.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"